--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -1,1 +1,116 @@
 /* Стилизация кнопки */
+/*Обнуление*/
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+*,*:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:focus, :active {outline: none;}
+a:focus, a:active {outline: none;}
+
+nav, footer, header, aside {display: block;}
+html, body {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+input, button, textarea {font-family: inherit;}
+
+input::-ms-clear {display: none;}
+button {cursor: pointer;}
+button::-moz-focus-inner {padding: 0; border: 0;}
+a, a:visited {text-decoration: none;}
+a:hover {text-decoration: none;}
+ul li {list-style: none;}
+img {vertical-align: top;}
+
+h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
+/*Обнуление*/
+
+
+.button__primary {
+    width: 189px;
+    height: 48px;
+    background: #4263EB;
+    border-radius: 8px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+
+}
+
+.button__primary:hover {
+    background: #2342c0;
+}
+
+.button__primary:disabled {
+    opacity: 0.5;
+    background: #4263EB;
+}
+
+.button__secondary {
+    width: 189px;
+    height: 48px;
+    background: #7048E8;
+    border-radius: 8px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+
+}
+
+.button__secondary:hover {
+    background: #5028C6;
+}
+
+.button__secondary:disabled {
+    opacity: 0.5;
+    background: #7048E8;
+}
+
+.button__alternate {
+    width: 189px;
+    height: 48px;
+    border: 1px solid #ACB5BD;
+    background: #fff;
+    border-radius: 8px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #495057;
+}
+
+.button__alternate:hover {
+    border: 1px solid #212429;
+    color: #495057;
+}
+
+.button__alternate:disabled {
+    opacity: 0.5;
+    border: 1px solid #ACB5BD;
+}
+
+
+
