--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,6 @@
 @import '../fonts/fonts.css';
+@import "header.css";
+@import "footer.css";
 
 :root {
     --white: #ffffff;
@@ -22,3 +24,38 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+
+.page__container {
+    max-width: 1110px;
+    width: 100%;
+    margin: 0 auto;
+
+}
+
+h1 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 64px;
+    color: var(--black);
+}
+
+h2 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 38px;
+    line-height: 48px;
+    color: var(--black);
+}
+
+p {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--black);
+}
+
