--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html, body {
+.main__container {
     max-width: 1110px;
     width: 100%;
     margin: 0 auto;
