--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     border-radius: 8px;
     max-width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -16,12 +17,12 @@
 }
 
 .histogram__middle {
-    padding: 0px 0px 0px 24px;
+    padding: 0px 0px 36px 24px;
 }
 
 .histogram__bottom {
     padding: 0px 29px 24px 26px;
-    max-height: 50px;
+    flex-grow: 1;
 }
 
 .histogram h4 {
@@ -58,7 +59,7 @@
 .histogram__graph {
     display: flex;
     gap: 1px;
-    height: 50px;
+    height: 100%;
     align-items: baseline;
 }
 
