--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,5 +1,3 @@
-/* Стилизация аккордеона */
-/* Стилизация кнопки */
 /*Обнуление*/
 *{
     padding: 0;
@@ -39,33 +37,39 @@ img {vertical-align: top;}
 h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
 /*Обнуление*/
 
-.accordion__item {
+.accordion {
     padding: 24px 0px 24px 32px;
     display: block;
     width: 730px;
     margin-bottom: 8px;
-    background: #FFFFFF;
-    border: 1px solid #ACB5BD;
+    background: var(--white);
+    border: 1px solid var(--grey-3);
     box-sizing: border-box;
     border-radius: 8px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 24px;
     color: var(--black);
 }
 
-p {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    color: var(--gray-4);
+.accordion__heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 32px 0px 0px;
 }
 
-.accordion__item:last-child {
+details[open] .accordion__icon {
+    transform: rotate(-180deg);
+}
+
+.accordion p {
+    padding: 16px 49px 8px 0px;
+    color: var(--grey-4);
+}
+
+.accordion:last-child {
     margin-bottom: 0px;
 }
 
