Update after comments

--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,47 +1,9 @@
-/*Обнуление*/
-*{
-    padding: 0;
-    margin: 0;
-    border: 0;
-}
-
-*,*:before, *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-:focus, :active {outline: none;}
-a:focus, a:active {outline: none;}
-
-nav, footer, header, aside {display: block;}
-html, body {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-    line-height: 1;
-    font-size: 14;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-input, button, textarea {font-family: inherit;}
-
-input::-ms-clear {display: none;}
-button {cursor: pointer;}
-button::-moz-focus-inner {padding: 0; border: 0;}
-a, a:visited {text-decoration: none;}
-a:hover {text-decoration: none;}
-ul li {list-style: none;}
-img {vertical-align: top;}
-
-h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
-/*Обнуление*/
+@import "/assets/css/main.css";
 
 .accordion {
     padding: 24px 0px 24px 32px;
     display: block;
     width: 730px;
-    margin-bottom: 8px;
     background: var(--white);
     border: 1px solid var(--grey-3);
     box-sizing: border-box;
@@ -53,6 +15,10 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
     color: var(--black);
 }
 
+.accordion_preview {
+    margin-bottom: 8px;
+}
+
 .accordion__heading {
     display: flex;
     flex-direction: row;
@@ -60,11 +26,11 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
     padding: 0px 32px 0px 0px;
 }
 
-details[open] .accordion__icon {
+.accordion[open] .accordion__icon {
     transform: rotate(-180deg);
 }
 
-.accordion p {
+.accordion__text {
     padding: 16px 49px 8px 0px;
     color: var(--grey-4);
 }
