--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import '../fonts/fonts.css';
+@import "/assets/css/normalize.css";
 
 :root {
     --white: #ffffff;
@@ -11,6 +12,7 @@
     --grey-2: #DDE2E5;
     --grey-3: #ACB5BD;
     --grey-4: #495057;
+    --color-3: #4263EB;
 
     --error: var(--red);
     --success: var(--blue);
