Resolved what discuss on slack

--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,5 +1,3 @@
-@import "/assets/css/main.css";
-
 .accordion {
     padding: 24px 0px 24px 32px;
     display: block;
@@ -35,7 +33,7 @@
     color: var(--grey-4);
 }
 
-.accordion:last-child {
+.accordion_preview:last-child {
     margin-bottom: 0px;
 }
 
