--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -42,10 +42,10 @@
     width: 172px;
 }
 
-.skeleton__line-w257 {
+.skeleton__line_w257 {
     width: 257px;
 }
 
-.skeleton__line-w100p {
+.skeleton__line_w100p {
     width: 100%;
 }
