--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -27,6 +27,7 @@
     gap: 8px;
     justify-content: center;
     padding-left: 16px;
+    width: 15%;
 }
 
 .skeleton__avatar {
@@ -39,13 +40,9 @@
 .skeleton__line {
     background: linear-gradient(92.51deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
     height: 20px;
-    width: 172px;
-}
-
-.skeleton__line_w257 {
-    width: 257px;
-}
-
-.skeleton__line_w100p {
     width: 100%;
+}
+
+.skeleton__line_short {
+    width: 60%;
 }
