--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -1,9 +1,12 @@
-body {
+.tooltip__preview {
+    width: 100%;
+    height: 100%;
+    display: flex;
     justify-content: center;
-    text-align: center;
+    align-items: center;
 }
 
-.icon__help {
+.tooltip__helpicon {
     width: 24px;
     height: 24px;
 }
@@ -16,7 +19,7 @@ body {
     font-size: 16px;
     text-align: center;
     color: var(--grey-2);
-    background: #4263EB;
+    background: var(--color-3);
     box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);
     border-radius: 10px;
     padding: 13px 21px 8px 21px;
@@ -25,7 +28,7 @@ body {
     justify-content: center;
     text-align: center;
     left: 50%;
-    transform: translate(-50%, -70px);
+    transform: translate(-50%, -38px);
 }
 
 .tooltip__help::after {
@@ -36,9 +39,9 @@ body {
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: #4263EB transparent transparent transparent;
+    border-color: var(--color-3) transparent transparent transparent;
 }
 
-.icon__help:hover ~ .tooltip__help {
+.tooltip__helpicon:hover ~ .tooltip__help {
     display: block;
 }
