--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@
     --color-3: #4263EB;
     --color-4: #334D6E;
     --color-5: #495057;
+    --color-6: #90A0B7;
 
     --error: var(--red);
     --success: var(--blue);
