--- a/07-lection5/02-radio/radio.css
+++ b/07-lection5/02-radio/radio.css
@@ -18,7 +18,7 @@
 .radio__control {
     width: 28px;
     height: 28px;
-    background: #FFFFFF;
+    background: var(--white);
     border: 1px solid var(--grey-2);
     box-sizing: border-box;
     border-radius: 14px;
