--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,8 @@
     --color-4: #334D6E;
     --color-5: #495057;
     --color-6: #90A0B7;
+    --color-7: #F9FAFC;
+    --color-8: #E5E5E5;
 
     --error: var(--red);
     --success: var(--blue);
@@ -35,13 +37,20 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.main__container {
+body {
+    background-color: var(--color-7);
+}
+
+.loadmore__container {
+    padding: 0px 0px 92px 0px;
+}
+
+.wrapper {
     max-width: 1110px;
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
 
 main {
