Fixed issues after check

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,8 @@
+.header {
+    background: var(--white);
+}
+
 .header__title {
     padding: 96px 0px 0px 0px;
 }
 
-header {
-    background: var(--white);
-}
