--- a/assets/css/component_page.css
+++ b/assets/css/component_page.css
@@ -2,7 +2,7 @@
     background: var(--color-8);
 }
 
-.main__container-component {
+.componentspage__wrapper {
     max-width: 1110px;
     width: 100%;
     margin: 0 auto;
