--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,14 +1,10 @@
-footer {
-    background-color: var(--white);
-}
-
 .footer {
     padding: 72px 0px 136px 0px;
     text-align: center;
-
+    background-color: var(--white);
 }
 
-.heading__footer {
+.footer__heading {
     padding-bottom: 32px;
 }
 
